# dedap-python

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dedap.py  pyproject.toml  setup.py
.github/workflows/: python-app.yml  python-publish.yml
dedap/: __init__.py  dedap.py
doc/: Makefile  conf.py  conf.py.in  index.rst  make.bat  refs.bib
doc/_static/: split_acyclic.dot
src/dedap/: dedap.py
