[build-system]
requires = ["setuptools >= 68.1.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dedap"
version = "1.0"
authors = [
	{ name="Dan Lynn", email="dan.lynn.ct@gmail.com" },
]
description = "Generalized dependency tracking and transitive reduction"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/studdansen/dedap"
Issues = "https://github.com/studdansen/dedap/issues"

[project.optional-dependencies]
test = ["mypy"]

[tool.mypy]
python_version = "3.8" # minimum allowed for `mypy`

[tool.setuptools.packages]
find = {}
